--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                         </div>
                     </div>
                 </header>
+                <script>
+                    let name = "Джон";
+                    let admin = name;
+                    let ourPlanetName = "Земля";
+                    let currentUserName = "Джон";
+                    alert(ourPlanetName);
+                    alert(currentUserName);
+                </script>
                 <section
                     class="
                         display-flex
